# dao-treasury-sentinel

./: README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
examples/: ens-snapshot.json  ens-snapshot.md
src/sentinel/: cli.py  metrics.py  models.py  report.py  risks.py
src/sentinel/sources/: alchemy.py  defillama.py  safe.py  sanctions.py
tests/: test_alchemy.py  test_defillama.py  test_metrics.py  test_models.py  test_report.py  test_risks.py  test_safe.py  test_sanctions.py
tests/fixtures/: alchemy_transfers.json  safe_balances.json  safe_info.json
